force-app/main/default/objects/Visit__c/fields/Area_Sales_Manager_Name__c.field-meta.xml
<CustomField>
    <fullName>Area_Sales_Manager_Name__c</fullName>
    <formula>Visitor_Name__r.L1_Approver__r.FirstName &amp; IF(ISBLANK(Visitor_Name__r.L1_Approver__r.MiddleName), &quot;&quot;, &quot; &quot; &amp; Visitor_Name__r.L1_Approver__r.MiddleName) &amp;
&quot; &quot; &amp; Visitor_Name__r.L1_Approver__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reporting Manager 1</label>
    <type>Text</type>
</CustomField>