force-app/main/default/objects/Visit__c/fields/Checked_In_Time__c.field-meta.xml
<CustomField>
    <fullName>Checked_In_Time__c</fullName>
    <label>Checked In Time</label>
    <type>DateTime</type>
</CustomField>