force-app/main/default/objects/Visit__c/fields/Checked_out_Location__c.field-meta.xml
<CustomField>
    <fullName>Checked_out_Location__c</fullName>
    <label>Checked out Location</label>
    <scale>5</scale>
    <type>Location</type>
</CustomField>