force-app/main/default/objects/Visit__c/fields/Checked_out_Time__c.field-meta.xml
<CustomField>
    <fullName>Checked_out_Time__c</fullName>
    <label>Checked out Time</label>
    <type>DateTime</type>
</CustomField>