force-app/main/default/objects/Visit__c/fields/Count_of_In_progress_Task__c.field-meta.xml
<CustomField>
    <fullName>Count_of_In_progress_Task__c</fullName>
    <label>Count of In-progress Task</label>
    <summaryFilterItems>
        <field>Visit_Task__c.Status__c</field>
        <operation>equals</operation>
        <value>In-Progress</value>
    </summaryFilterItems>
    <summaryForeignKey>Visit_Task__c.Visit__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>