force-app/main/default/objects/Visit__c/fields/Employee_Code__c.field-meta.xml
<CustomField>
    <fullName>Employee_Code__c</fullName>
    <formula>IF( 
   Visitor_Name__r.EmployeeNumber != NULL,
   Visitor_Name__r.EmployeeNumber,
   &apos;&apos;
  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Employee Code</label>
    <type>Text</type>
</CustomField>