force-app/main/default/objects/Visit__c/fields/Hub_Name__c.field-meta.xml
<CustomField>
    <fullName>Hub_Name__c</fullName>
    <formula>Visitor_Name__r.Division</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hub Name</label>
    <type>Text</type>
</CustomField>