force-app/main/default/objects/Visit__c/fields/Manager__c.field-meta.xml
<CustomField>
    <fullName>Manager__c</fullName>
    <formula>Owner:User.Manager.FirstName &amp;
IF(ISBLANK(Owner:User.Manager.MiddleName), &quot;&quot;, &quot; &quot; &amp; Owner:User.Manager.MiddleName) &amp;
&quot; &quot; &amp; Owner:User.Manager.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Manager</label>
    <type>Text</type>
</CustomField>