force-app/main/default/objects/Visit__c/fields/Reason_to_change_the_Beat__c.field-meta.xml
<CustomField>
    <fullName>Reason_to_change_the_Beat__c</fullName>
    <label>Reason to change the Beat</label>
    <length>100</length>
    <type>Text</type>
</CustomField>