force-app/main/default/objects/Visit__c/fields/Regional_Sales_Manager_Name__c.field-meta.xml
<CustomField>
    <fullName>Regional_Sales_Manager_Name__c</fullName>
    <formula>Visitor_Name__r.L1_Approver__r.L1_Approver__r.FirstName + &apos; &apos; + Visitor_Name__r.L1_Approver__r.L1_Approver__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reporting Manager 2</label>
    <type>Text</type>
</CustomField>