force-app/main/default/objects/Visit__c/fields/Reporting_Manager_2_Code__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Manager_2_Code__c</fullName>
    <formula>Visitor_Name__r.L1_Approver__r.L1_Approver__r.EmployeeNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reporting Manager 2 Code</label>
    <type>Text</type>
</CustomField>