force-app/main/default/objects/Visit__c/fields/Salesman_Designation__c.field-meta.xml
<CustomField>
    <fullName>Salesman_Designation__c</fullName>
    <formula>Visitor_Name__r.Employee_Role__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Salesman Designation</label>
    <type>Text</type>
</CustomField>