force-app/main/default/objects/Visit__c/fields/Snapshot_Count_of_In_Progress_Task__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_Count_of_In_Progress_Task__c</fullName>
    <label>Snapshot Count of In Progress Task</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>