force-app/main/default/objects/Visit__c/fields/Snapshot_Total_Check_In_Check_Out_Time__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_Total_Check_In_Check_Out_Time__c</fullName>
    <label>Snapshot Total Check In Check Out Time</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>