force-app/main/default/objects/Visit__c/fields/Snapshot_Total_Tasks_for_Visit__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_Total_Tasks_for_Visit__c</fullName>
    <label>Snapshot Total Tasks for Visit</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>