force-app/main/default/objects/Visit__c/fields/Total_Ad_Hoc_Visits__c.field-meta.xml
<CustomField>
    <fullName>Total_Ad_Hoc_Visits__c</fullName>
    <label>Total Ad Hoc Visits</label>
    <summaryFilterItems>
        <field>Visit_Task__c.Visit_Type__c</field>
        <operation>equals</operation>
        <value>Ad-Hoc</value>
    </summaryFilterItems>
    <summaryForeignKey>Visit_Task__c.Visit__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>