force-app/main/default/objects/Visit__c/fields/Total_Check_In_and_Check_Out_Time__c.field-meta.xml
<CustomField>
    <fullName>Total_Check_In_and_Check_Out_Time__c</fullName>
    <label>Total Check In and Check Out Time</label>
    <summarizedField>Visit_Task__c.Total_Check_In_and_Check_Out_Time__c</summarizedField>
    <summaryForeignKey>Visit_Task__c.Visit__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>