force-app/main/default/objects/Visit__c/fields/Total_No_Of_Order_Taken__c.field-meta.xml
<CustomField>
    <fullName>Total_No_Of_Order_Taken__c</fullName>
    <formula>Total_Number_of_Teleorders__c +  Total_Number_of_Physical_orders__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total No Of  Order Taken</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>