force-app/main/default/objects/Visit__c/fields/Total_Number_of_Physical_orders__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_of_Physical_orders__c</fullName>
    <label>No of Physical Visit Order Taken</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>