force-app/main/default/objects/Visit__c/fields/Total_Number_of_Teleorders__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_of_Teleorders__c</fullName>
    <label>No Of Tele Visit Order Taken</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>