force-app/main/default/objects/Visit__c/fields/Total_Numbers_of_Physical_Visit__c.field-meta.xml
<CustomField>
    <fullName>Total_Numbers_of_Physical_Visit__c</fullName>
    <label>No Of Physical Visit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>