force-app/main/default/objects/Visit__c/fields/Total_Order_Value_This_Month__c.field-meta.xml
<CustomField>
    <fullName>Total_Order_Value_This_Month__c</fullName>
    <formula>IF ( 
    AND (
         Visit_planned_date__c  &gt;= DATE ( YEAR ( TODAY (  )  ) , MONTH ( TODAY (  )  ) ,1 ),
         Visit_planned_date__c  &lt;= TODAY (  )
   ) ,Total_Value_of_Physical_orders__c + Total_Value_of_Teleorders__c,
   0 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Order Value This Month</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>