force-app/main/default/objects/Visit__c/fields/Total_planned_Visit__c.field-meta.xml
<CustomField>
    <fullName>Total_planned_Visit__c</fullName>
    <label>Total planned Visit</label>
    <summaryFilterItems>
        <field>Visit_Task__c.Visit_Type__c</field>
        <operation>equals</operation>
        <value>Planned</value>
    </summaryFilterItems>
    <summaryForeignKey>Visit_Task__c.Visit__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>