force-app/main/default/objects/Visit__c/fields/Total_Tasks_for_Visit__c.field-meta.xml
<CustomField>
    <fullName>Total_Tasks_for_Visit__c</fullName>
    <label>Total Tasks for Visit</label>
    <summaryForeignKey>Visit_Task__c.Visit__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>