force-app/main/default/objects/Visit__c/fields/Total_Value_of_Physical_orders__c.field-meta.xml
<CustomField>
    <fullName>Total_Value_of_Physical_orders__c</fullName>
    <label>Physical Visit Order (Value)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>