force-app/main/default/objects/Visit__c/fields/Unproductive_Reasons__c.field-meta.xml
<CustomField>
    <fullName>Unproductive_Reasons__c</fullName>
    <label>Unproductive Reasons</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Shop closed</fullName>
            </value>
            <value>
                <fullName>Not interested - pricing / quality issue</fullName>
            </value>
            <value>
                <fullName>Not interested - competing products / brands available</fullName>
            </value>
            <value>
                <fullName>Old stock available</fullName>
            </value>
            <value>
                <fullName>Owner not available</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>