force-app/main/default/objects/Visit__c/fields/Visit_planned_date__c.field-meta.xml
<CustomField>
    <fullName>Visit_planned_date__c</fullName>
    <label>Visit planned date</label>
    <type>Date</type>
</CustomField>