force-app/main/default/objects/Visit__c/fields/Visit_Type__c.field-meta.xml
<CustomField>
    <fullName>Visit_Type__c</fullName>
    <label>Visit Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Planned</fullName>
            </value>
            <value>
                <fullName>Ad-Hoc</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>