force-app/main/default/objects/Visit__c/recordTypes/Distributor_Visit.recordType-meta.xml
<RecordType>
    <fullName>Distributor_Visit</fullName>
    <active>true</active>
    <label>Distributor Visit</label>
</RecordType>