force-app/main/default/objects/Visit__c/recordTypes/Retailer_Visit.recordType-meta.xml
<RecordType>
    <fullName>Retailer_Visit</fullName>
    <active>true</active>
    <label>Retailer Visit</label>
</RecordType>