force-app/main/default/objects/Visit__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Beat__c</columns>
    <columns>Visit_planned_date__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Visitor_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>