force-app/main/default/objects/Visit__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Beat__c</columns>
    <columns>Visit_planned_date__c</columns>
    <columns>Visitor_Name__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Visits</label>
</ListView>