force-app/main/default/objects/Visit__c/listViews/My_Visit.listView-meta.xml
<ListView>
    <fullName>My_Visit</fullName>
    <columns>Visit_planned_date__c</columns>
    <columns>Beat__c</columns>
    <columns>Visit_Type__c</columns>
    <columns>Status__c</columns>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>My Visit</label>
</ListView>